# Attesta-protocol-Contract

./: .gitignore  COMPLIANCE.md  CONTRIBUTING.md  ISSUES.md  README.md  SECURITY.md
.github/workflows/: circuits.yml  contracts.yml
circuits/: CONTRIBUTING.md  Cargo.toml
circuits/artifacts/: README.md
circuits/artifacts/transfer/: SHA256SUMS  layout.txt  verifying_key.hex
circuits/artifacts/withdraw/: SHA256SUMS  layout.txt  verifying_key.hex
circuits/ceremony/: README.md
circuits/docs/: prover.md  transfer.md  withdraw.md
circuits/scripts/: build-artifacts.sh
circuits/src/: artifacts.rs  encoding.rs  lib.rs  merkle.rs  note.rs  poseidon.rs  prover.rs  transfer.rs  util.rs  withdraw.rs
circuits/tests/: groth16_e2e.rs
contracts/: Cargo.toml  README.md
contracts/attestation_registry/: Cargo.toml
contracts/attestation_registry/src/: lib.rs  test.rs
contracts/attestation_registry/test_snapshots/test/: attestation_expires.1.json  invalid_proof_rejected.1.json  issuer_removal_blocks_new_presentations_not_old_attestations.1.json  new_credential_recovers_from_revocation.1.json  only_registered_issuers_can_revoke.1.json  present_then_check.1.json  revocation_invalidates_attestation.1.json  revoked_credential_cannot_be_presented.1.json  unknown_issuer_key_rejected.1.json
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/issuer_registry/: Cargo.toml
contracts/issuer_registry/src/: lib.rs  test.rs
contracts/issuer_registry/test_snapshots/test/: add_issuer_after_timelock.1.json  canceled_action_cannot_execute.1.json  duplicate_signing_key_rejected.1.json  execute_before_timelock_fails.1.json  remove_issuer_deactivates_keys.1.json  rotate_key_deactivates_old_key.1.json
contracts/shielded_pool/: Cargo.toml
contracts/shielded_pool/src/: lib.rs  poseidon.rs  poseidon_params.rs  test.rs  test_e2e.rs
contracts/shielded_pool/test_snapshots/test/: canceled_rotation_cannot_execute.1.json  deposit_locks_tokens_and_grows_tree.1.json  deposit_rejects_foreign_token.1.json  deposit_rejects_non_canonical_commitment.1.json  deposit_rejects_nonpositive_amount.1.json  gated_pool_admits_attested_depositor.1.json  gated_pool_rejects_unattested_depositor.1.json  requeue_replaces_pending_rotation_and_restarts_clock.1.json  transfer_rejects_double_spend.1.json  transfer_rejects_invalid_proof.1.json  transfer_rejects_unknown_root.1.json  transfer_spends_nullifiers_and_inserts_commitments.1.json  verifier_rotation_respects_timelock.1.json  withdraw_pays_out_and_spends_nullifier.1.json  withdraw_rejects_spent_nullifier.1.json
contracts/shielded_pool/test_snapshots/test_e2e/: full_flow_deposit_transfer_withdraw_with_real_proofs.1.json
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs  test.rs  test_real_proof.rs
contracts/zk_verifier/test_snapshots/test/: input_length_mismatch_panics.1.json  non_canonical_input_is_rejected.1.json  vk_is_pinned_at_construction.1.json
contracts/zk_verifier/test_snapshots/test_real_proof/: real_transfer_proof_verifies_on_chain.1.json  real_withdraw_proof_verifies_on_chain.1.json
