[package]
name = "attesta-circuits"
description = "Groth16 circuits (arkworks) for Attesta: transfer, withdraw, attestation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh", "sponge", "r1cs"] }
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"

[dev-dependencies]

[[bin]]
name = "build-artifacts"
path = "src/bin/build_artifacts.rs"

[[bin]]
name = "attesta-prover"
path = "src/bin/attesta_prover.rs"
