[workspace]
resolver = "2"
members = [
    "interfaces",
    "zk_verifier",
    "shielded_pool",
    "attestation_registry",
    "issuer_registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Attesta-protocol/Attesta-protocol-Contract"
authors = ["Attesta Protocol Contributors"]

[workspace.dependencies]
soroban-sdk = "27.0.0"
attesta-interfaces = { path = "interfaces" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# Native-test-only: the proving stack used by the end-to-end tests is
# far too slow unoptimized, so optimize dependencies even in dev.
[profile.dev.package."*"]
opt-level = 2
