[package]
name = "attesta-attestation-registry"
description = "ZK compliance attestations: present proofs over issuer credentials, check with one call"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
attesta-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
attesta-issuer-registry = { path = "../issuer_registry" }
