[package]
name = "attesta-interfaces"
description = "Shared types and cross-contract client interfaces for the Attesta protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
