[package]
name = "attesta-shielded-pool"
description = "Confidential value: shielded amounts with a public participant graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
attesta-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
attesta-circuits = { path = "../../circuits" }
ark-bls12-381 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand_chacha = "0.3"
attesta-zk-verifier = { path = "../zk_verifier" }
