[package]
name = "attesta-shielded-pool"
description = "Confidential value: shielded amounts with a public participant graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
attesta-interfaces = { workspace = true }
# In-wasm field arithmetic for the Poseidon Merkle hash: host-call
# dispatch per Fr op costs ~8k metered instructions, putting a 20-level
# insert far over the tx CPU limit; the same arithmetic compiled into
# the contract wasm is ~25x cheaper.
ark-bls12-381 = { version = "0.5", default-features = false, features = ["scalar_field"] }
ark-ff = { version = "0.5", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
attesta-circuits = { path = "../../circuits" }
ark-bls12-381 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand_chacha = "0.3"
attesta-zk-verifier = { path = "../zk_verifier" }
