[package]
name = "attesta-zk-verifier"
description = "Groth16 proof verification over BLS12-381 via Protocol 25 host functions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
attesta-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
attesta-circuits = { path = "../../circuits" }
ark-bls12-381 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand_chacha = "0.3"
